--- a/Human_resources.html
+++ b/Human_resources.html
@@ -50,7 +50,7 @@
             </div>
             <div class="main-menu">
                 <ul class="list">
-                    <li class="active">
+                    <li>
                         <a href="dashboard.html">
                             <i class="material-icons icons">dashboard</i> اللوحة الرئيسيه
                         </a>
@@ -67,11 +67,10 @@
                         </a>
 
                     </li>
-                    <li>
+                    <li class="active">
                         <a href="Human_resources.html">
                             <i class="material-icons icons">store_mall_directory</i> الموارد البشريه
                         </a>
-
                     </li>
 
                 </ul>
@@ -88,117 +87,39 @@
                 <div class="content">
                     <div class="row">
                         <div class="col-lg-3 col-md-6">
-                            <div class="card mb-0 pb-0">
-                                <div class="card-header bg-dark text-right">
-                                    المستخدمون
+                            <a href="Human_resources_team.html">
+                                <div class="card-body">
+                                    <i class="material-icons">people</i>
+                                    <h4 class="card-title"> بيانات الموظفين </h4>
                                 </div>
-
-                                <div class="card-body text-center">
-                                    <h4 class="card-title">15</h4>
-                                    <p class="card-text">مستخدم</p>
-                                </div>
-                            </div>
-
+                            </a>
                         </div>
                         <div class="col-lg-3 col-md-6">
-                            <div class="card mb-0 pb-0">
-                                <a href="users.html">
-                                    <div class="card-header bg-dark text-right">
-                                        <i class="material-icons pull-left mt-2">keyboard_arrow_left</i> المستخدمون
-                                    </div>
-                                </a>
-                                <div class="card-body text-center">
-                                    <h4 class="card-title">15</h4>
-                                    <p class="card-text">مستخدم</p>
-                                </div>
+                            <div class="card-body">
+                                <i class="material-icons">date_range</i>
+                                <h4 class="card-title">بيانات الموظفين</h4>
                             </div>
-
                         </div>
                         <div class="col-lg-3 col-md-6">
-                            <div class="card mb-0 pb-0">
-                                <div class="card-header bg-dark text-right">
-                                    المستخدمون
-                                </div>
-                                <div class="card-body text-center">
-                                    <h4 class="card-title">15</h4>
-                                    <p class="card-text">مستخدم</p>
-                                </div>
+                            <div class="card-body">
+                                <i class="material-icons"> money</i>
+                                <h4 class="card-title">بيانات الموظفين</h4>
                             </div>
-
                         </div>
                         <div class="col-lg-3 col-md-6">
-                            <div class="card mb-0 pb-0">
-                                <div class="card-header bg-dark text-right">
-                                    المستخدمون
-                                </div>
-                                <div class="card-body text-center">
-                                    <h4 class="card-title">15</h4>
-                                    <p class="card-text">مستخدم</p>
-                                </div>
+                            <div class="card-body">
+                                <i class="material-icons">account_balance_wallet</i>
+                                <h4 class="card-title">بيانات الموظفين</h4>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="card-body">
+                                <i class="material-icons">bar_chart</i>
+                                <h4 class="card-title">بيانات الموظفين</h4>
                             </div>
                         </div>
                     </div>
-                    <div class="row mt-4">
-                        <div class="col-md-12">
-                            <table class="table">
-                                <thead class="thead-dark">
-                                    <tr>
-                                        <th>رقم التذكره</th>
-                                        <th> فئه المعالمه </th>
-                                        <th> نوع المعامله </th>
-                                        <th> التوقيت </th>
-                                        <th colspan="4">
-                                            الرسوم
-                                            <div class="thead-dark table_bg_color">
-                                                <div class="d-flex justify-content-around">
-                                                    <div class="item"> الحكومه </div>
-                                                    <div class="item"> المركز </div>
-                                                    <div class="item"> الضريبه </div>
-                                                    <div class="item"> الاجمالى </div>
-                                                </div>
-                                            </div>
-                                        </th>
-                                        <th> الموظف المختص </th>
-                                    </tr>
-                                </thead>
-                                <tbody class="tbody_bg">
-                                    <tr>
-                                        <th>1</th>
-                                        <td>Mark</td>
-                                        <td>Otto</td>
-                                        <td>@mdo</td>
-                                        <td>Otto</td>
-                                        <td>@mdo</td>
-                                        <td>Otto</td>
-                                        <td>@mdo</td>
-                                        <td>Otto</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">2</th>
-                                        <td>Jacob</td>
-                                        <td>Thornton</td>
-                                        <td>@fat</td>
-                                        <td>Otto</td>
-                                        <td>@mdo</td>
-                                        <td>Otto</td>
-                                        <td>@mdo</td>
-                                        <td>Otto</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">3</th>
-                                        <td>Larry</td>
-                                        <td>the Bird</td>
-                                        <td>@twitter</td>
-                                        <td>Otto</td>
-                                        <td>@mdo</td>
-                                        <td>Otto</td>
-                                        <td>@mdo</td>
-                                        <td>Otto</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </div>
