--- a/Human_resources_details.html
+++ b/Human_resources_details.html
@@ -50,7 +50,7 @@
             </div>
             <div class="main-menu">
                 <ul class="list">
-                    <li class="active">
+                    <li>
                         <a href="dashboard.html">
                             <i class="material-icons icons">dashboard</i> اللوحة الرئيسيه
                         </a>
@@ -67,11 +67,10 @@
                         </a>
 
                     </li>
-                    <li>
+                    <li class="active">
                         <a href="Human_resources.html">
                             <i class="material-icons icons">store_mall_directory</i> الموارد البشريه
                         </a>
-
                     </li>
 
                 </ul>
@@ -85,115 +84,40 @@
                 <!-- <div class="title_page">
                     <h2> معاملات اليوم </h2>
                 </div> -->
-                <div class="content">
+                <div class="content details">
                     <div class="row">
                         <div class="col-lg-3 col-md-6">
-                            <div class="card mb-0 pb-0">
-                                <div class="card-header bg-dark text-right">
-                                    المستخدمون
-                                </div>
-
-                                <div class="card-body text-center">
-                                    <h4 class="card-title">15</h4>
-                                    <p class="card-text">مستخدم</p>
-                                </div>
-                            </div>
-
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="card mb-0 pb-0">
-                                <a href="users.html">
-                                    <div class="card-header bg-dark text-right">
-                                        <i class="material-icons pull-left mt-2">keyboard_arrow_left</i> المستخدمون
-                                    </div>
-                                </a>
-                                <div class="card-body text-center">
-                                    <h4 class="card-title">15</h4>
-                                    <p class="card-text">مستخدم</p>
-                                </div>
-                            </div>
-
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="card mb-0 pb-0">
-                                <div class="card-header bg-dark text-right">
-                                    المستخدمون
-                                </div>
-                                <div class="card-body text-center">
-                                    <h4 class="card-title">15</h4>
-                                    <p class="card-text">مستخدم</p>
-                                </div>
-                            </div>
-
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="card mb-0 pb-0">
-                                <div class="card-header bg-dark text-right">
-                                    المستخدمون
-                                </div>
-                                <div class="card-body text-center">
-                                    <h4 class="card-title">15</h4>
-                                    <p class="card-text">مستخدم</p>
-                                </div>
+                            <div class="card-body">
+                                <img class="image-top" src="https://via.placeholder.com/100" alt="">
+                                <h4 class="card-title"></h4>
+                                <p class="card-text"> مدير المركز </p>
+                                <p class="card-text"> يعمل منذ 01/01/2019 </p>
                             </div>
                         </div>
-                    </div>
-                    <div class="row mt-4">
-                        <div class="col-md-12">
-                            <table class="table">
-                                <thead class="thead-dark">
+                        <div class="col-lg-9 col-md-6 table-details">
+                            <table class="table table-striped tbody_bg">
+                                <thead>
                                     <tr>
-                                        <th>رقم التذكره</th>
-                                        <th> فئه المعالمه </th>
-                                        <th> نوع المعامله </th>
-                                        <th> التوقيت </th>
-                                        <th colspan="4">
-                                            الرسوم
-                                            <div class="thead-dark table_bg_color">
-                                                <div class="d-flex justify-content-around">
-                                                    <div class="item"> الحكومه </div>
-                                                    <div class="item"> المركز </div>
-                                                    <div class="item"> الضريبه </div>
-                                                    <div class="item"> الاجمالى </div>
-                                                </div>
-                                            </div>
-                                        </th>
-                                        <th> الموظف المختص </th>
+                                        <th>الجنسيه</td>
+                                            <th>باكستان</th>
                                     </tr>
                                 </thead>
-                                <tbody class="tbody_bg">
+                                <tbody>
                                     <tr>
-                                        <th>1</th>
-                                        <td>Mark</td>
-                                        <td>Otto</td>
-                                        <td>@mdo</td>
-                                        <td>Otto</td>
-                                        <td>@mdo</td>
-                                        <td>Otto</td>
-                                        <td>@mdo</td>
-                                        <td>Otto</td>
+                                        <td>الاماره</td>
+                                        <td>ابو ظبي</td>
                                     </tr>
                                     <tr>
-                                        <th scope="row">2</th>
-                                        <td>Jacob</td>
-                                        <td>Thornton</td>
-                                        <td>@fat</td>
-                                        <td>Otto</td>
-                                        <td>@mdo</td>
-                                        <td>Otto</td>
-                                        <td>@mdo</td>
-                                        <td>Otto</td>
+                                        <td>الدراسه</td>
+                                        <td>الدراسه</td>
                                     </tr>
                                     <tr>
-                                        <th scope="row">3</th>
-                                        <td>Larry</td>
-                                        <td>the Bird</td>
-                                        <td>@twitter</td>
-                                        <td>Otto</td>
-                                        <td>@mdo</td>
-                                        <td>Otto</td>
-                                        <td>@mdo</td>
-                                        <td>Otto</td>
+                                        <td>الدراسه</td>
+                                        <td>الدراسه</td>
+                                    </tr>
+                                    <tr>
+                                        <td>الدراسه</td>
+                                        <td>الدراسه</td>
                                     </tr>
                                 </tbody>
                             </table>
