--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html>
 
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="assets/css/material.css">
     <link rel="stylesheet" href="assets/css/materialize.min.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style_rtl.css">
 </head>
 
 <body>
@@ -19,31 +19,46 @@
     <div class="wrapper">
         <!-- end header here -->
         <!-- start content here -->
-        <div class="body_content padding_section backgroundMark">
+        <div class="body_content padding_section">
+            <div class="bg-login"></div>
+            <div class="backgroundMark"></div>
             <div class="container">
+                <div class="lang">
+                    <ul class="navbar-nav">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="lang" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                </span> العربيه
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="lang">
+                                <a class="dropdown-item" href="#">العربيه</a>
+                                <a class="dropdown-item" href="#"> English </a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
                 <div class="row">
                     <div class="offset-4 col-lg-4">
                         <div class="main-login">
                             <div class="loges text-center">
-                                <img class="mb-2" src="assets/img/MOB_Logo.png" alt="" title="">
+                                <img class="mb-2" src="assets/img/logo-amer.png" alt="" title="">
                                 <div class="text-logo">
-                                    <h2> لوحة تحكم </h2>
-                                    <h2> تطبيق المسح الميداني </h2>
+                                    <h2> نظام التواصل واداره الموارد </h2>
+                                    <h2> evolutions system@ </h2>
                                 </div>
                             </div>
                             <div class="line"></div>
                             <form id="myForm" class="form">
-                                <h2 class="title_form"> تسجيل الدخول </h2>
+                                <!-- <h2 class="title_form"> تسجيل الدخول </h2> -->
                                 <div class="form-group">
                                     <input id="" type="text" class="inputMaterial" autofocus required>
                                     <span class="icons"> <i onclick="removeData()" class="material-icons">close</i> </span>
-                                    <label class="label"> اسم المستخدم </label>
+                                    <label class="label label_blue"> اسم المستخدم </label>
                                 </div>
                                 <div class="form-group">
                                     <input id="password" type="password" class="inputMaterial" required>
                                     <span class="icons visibility"> <i onclick="showPassword()" class="material-icons">visibility</i> </span>
                                     <span class="icons visibility_off none"> <i onclick="showPassword()" class="material-icons">visibility_off</i> </span>
-                                    <label class="label"> كلمه المرور </label>
+                                    <label class="label label_blue"> كلمه المرور </label>
                                 </div>
                                 <div class="form-group">
                                     <p class="check">
